Trying to bugfix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ header{
 }
 
 .techcourses .info {
-	padding-top:5%;
+	padding-top:50px;
 	padding-left: 10%;
 	position: relative;
 	text-align:left;
